    - Added debci-update-worker as a wrapper for callling debci-setup for each
      supported suite.
  * backends/lxc:
    - retry `apt-get update` until it works. Most of the time when the testbed
      setup fails on production is during `apt-get update`.
  * "Platform-Specific issues" will now not consider tmpfail as an issue.
    Those are already being tracked by "Status alerts".

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 03 Jun 2016 17:33:16 -0300

debci (1.3) unstable; urgency=medium

  * debci-collector:
    - remove creation of .timestamp files under data/autopkgtest-incoming/,
      which are no longer used for anything
  * bin/debci-batch:
    - use one tmp_dir per package/suite/architecture
  * bin/debci-generate-index
    - use one tmp_dir per package/suite/architecture
    - compress artifacts (except log) in a single tarball so that instead of N
      files per test run, we only keep 2 files per test run: log.gz and
      artifacts.tar.gz. This should significantly reduce the usage of inodes.

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 03 Jun 2016 16:26:11 -0300

debci (1.2) unstable; urgency=medium

  [ Antonio Terceiro ]
  * debian/debci-worker@.service: also bump LimitNPROC to infinity to avoid
    the `Cannot fork` issue.
  * backends/lxc/test-package: use adt-virt-lxc --name option to facilitate
    mapping from a running test to package names. This requires autopkgtest
    (>= 3.20).
  * bin/debci-collector, bin/debci-worker, lib/functions.sh#report_status:
    display suite and architecture together with package names
  * HTML UI:
    * add page listing Platform-specific issues, i.e. packages that passes on
      one suite/arch but fails on another suite/arch.
    * fix Status page to not hide all charts when any platform does not have
      enough data
    * rewrite Status charts page. In special, instead of loading the full
      history via AJAX, which takes quite a while, embed a reduced view of the